--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,11 +21,22 @@ dependencies:
   flutter_spinkit: ^5.2.0
   image_picker: ^1.0.7
   dio: ^5.4.2+1
+  get_it: ^7.6.8
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  cached_network_image: ^3.3.1
+  dartz: ^0.10.1
+
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.9
+
+
+
 
 
 
